MAX_PERM_GEN is ignored in Java 8