@@ -1,7 +1,6 @@
 #!/bin/sh
 
 NORMAL="-server -d64 -Xms4G -Xmx4G"
-MAX_PERM_GEN="-XX:MaxPermSize=256m"
 HEAP_DUMP="-XX:+HeapDumpOnOutOfMemoryError"
 HEADLESS="-Djava.awt.headless=true"
 
